@@ -56,6 +56,12 @@ DIRS_TO_MAKE = $(bindir) $(libdir) $(octincludedir)/octave $(fcnfiledir) \
 SHELL_SCRIPTS = octave-bug octave-config mkoctfile run-octave
 
 all: $(SHELL_SCRIPTS) $(filter-out libcruft liboctave, $(SUBDIRS)) dist-info-files
+	@echo "Octave successfully built.  Now choose from the following:"
+	@echo ""
+	@echo "   ./run-octave    - to run in place"
+	@echo "   make check      - to run the tests"
+	@echo "   make install    - to install"
+	@echo ""
 .PHONY: all
 
 src: liboctave
